chore: consolidate prompt verification script

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "design-lint": "npm run lint:design",
     "check": "concurrently \"npm test -- --run\" \"npm run lint\" \"npm run lint:design\" \"npm run typecheck\"",
     "format": "prettier --write .",
-    "verify-prompts": "tsx scripts/verify-prompts.ts",
-    "check-prompts": "tsx scripts/check-prompts-updated.ts",
+    "verify-prompts": "tsx scripts/verify-prompts.ts --verify",
+    "check-prompts": "tsx scripts/verify-prompts.ts",
     "token-guard": "tsx scripts/token-guard.ts",
     "contrast-report": "tsx scripts/contrast-report.ts",
     "postinstall": "tsx scripts/regen-if-needed.ts",
