--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -1,5 +1,9 @@
 name: Visual Regression
 
+concurrency:
+  group: visual-regression-${{ inputs.branch || github.ref }}
+  cancel-in-progress: true
+
 on:
   workflow_dispatch:
     inputs:
