--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "dev": "npm run prebuild && tsx scripts/run-next.ts dev -p 3000",
-    "prebuild": "tsx scripts/regen-if-needed.ts && npm run generate-themes && npm run generate-tokens",
+    "prebuild": "tsx scripts/regen-if-needed.ts",
     "regen-ui": "tsx scripts/generate-ui-index.ts",
     "build-gallery-usage": "node --import tsx --import ./scripts/register-loaders.mjs scripts/build-gallery-usage.ts",
     "regen-feature": "tsx scripts/generate-feature-index.ts",
