--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -34,6 +34,9 @@ jobs:
 
       - uses: ./.github/actions/setup-node-project
 
+      - name: Verify prompts registry
+        run: npm run verify-prompts
+
       - name: Export static site
         shell: bash
         run: |
