--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -34,8 +34,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
         with:
-          fetch-depth: 2
-          ref: ${{ github.ref }}
+          fetch-depth: 0
+          # Use the head SHA for PRs; fall back to the workflow ref for other events.
+          ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.ref }}
 
       - uses: ./.github/actions/setup-node-project
 
