--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^24.5.2",
+    "@types/postcss-import": "^14.0.3",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitest/coverage-v8": "^3.2.4",
@@ -78,6 +79,7 @@
     "lint-staged": "^16.2.0",
     "p-limit": "^7.1.1",
     "postcss": "^8.4.49",
+    "postcss-import": "^16.1.1",
     "prettier": "^3.6.2",
     "style-dictionary": "^5.0.4",
     "tailwindcss": "3.4.16",
