feat: add surface depth utilities

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,8 @@
     ],
     "incremental": true,
     "allowJs": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "disableSizeLimit": true
   },
   "include": [
     "next-env.d.ts",
