--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,10 +73,13 @@ jobs:
           echo "::add-matcher::.github/matchers/typescript.json"
           npm run typecheck:ci
 
-      - name: Test
+      - name: Test (legacy depth)
         run: |
           mkdir -p artifacts/unit
           npm run test:ci
+
+      - name: Test (organic depth)
+        run: NEXT_PUBLIC_ORGANIC_DEPTH=true npm test -- --run
 
       - name: Report test summary
         if: always()
