chore: add bundle analysis tooling

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "generate-themes": "tsx scripts/generate-themes.ts",
     "generate-tokens": "tsx scripts/generate-tokens.ts",
     "build": "tsx scripts/run-next.ts build",
+    "prebuild:analyze": "npm run prebuild && node --input-type=module -e \"import { mkdirSync, rmSync } from 'node:fs'; import { resolve } from 'node:path'; const fallback = 'docs/bundle-report'; const raw = (process.env.BUNDLE_ANALYZE_OUTPUT_DIR ?? '').trim(); const target = raw.length > 0 ? raw : fallback; const absolute = resolve(target); rmSync(absolute, { recursive: true, force: true }); mkdirSync(absolute, { recursive: true });\"",
+    "build:analyze": "cross-env ANALYZE=true BUNDLE_ANALYZE_OUTPUT_DIR=docs/bundle-report tsx scripts/run-next.ts build",
+    "postbuild:analyze": "node --input-type=module -e \"import { cpSync, existsSync, mkdirSync, rmSync } from 'node:fs'; import { resolve } from 'node:path'; const fallback = 'docs/bundle-report'; const raw = (process.env.BUNDLE_ANALYZE_OUTPUT_DIR ?? '').trim(); const target = raw.length > 0 ? raw : fallback; const absolute = resolve(target); const source = resolve('.next', 'analyze'); if (existsSync(source)) { rmSync(absolute, { recursive: true, force: true }); mkdirSync(absolute, { recursive: true }); cpSync(source, absolute, { recursive: true }); console.log(`Bundle analysis artifacts saved to ${target}`); } else { console.warn('Bundle analyzer output not found at', source); }\"",
+    "analyze": "npm run build:analyze",
     "start": "tsx scripts/run-next.ts start -p 3000",
     "lint": "node -r ./scripts/setup-eslint-flat.cjs ./node_modules/eslint/bin/eslint.js --cache --cache-location .eslintcache src",
     "lint:ci": "npm run lint -- --max-warnings=0",
@@ -53,6 +57,7 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
+    "@next/bundle-analyzer": "^15.5.4",
     "@next/eslint-plugin-next": "^15.5.4",
     "@playwright/test": "^1.55.1",
     "@storybook/react": "^9.1.8",
@@ -68,6 +73,7 @@
     "autoprefixer": "^10.4.21",
     "cli-progress": "^3.12.0",
     "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "^10.1.8",
