--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,28 @@
-# Copy this file to .env.local and adjust values as needed.
-# Only commit .env.example; keep .env.local secrets out of version control.
+# Core runtime configuration
+# NODE_ENV is set by the package scripts; update only when running the app manually.
+NODE_ENV=development
+# Set to true in CI environments to enable stricter validation + retries.
+CI=false
+# Enable bundle analyzer assets when true.
+ANALYZE=false
+# Treat the build as a static export.
+EXPORT_STATIC=false
+# Flag the deployment as GitHub Pages to adjust the base path.
+GITHUB_PAGES=false
+# Optional GitHub repository slug (owner/name) for Pages deployments.
+GITHUB_REPOSITORY=
+# Exposed by Next.js during build steps.
+NEXT_PHASE=
+# Skip rendering gallery previews during static export builds.
+SKIP_PREVIEW_STATIC=false
+# Optional base path override for server-only contexts.
+BASE_PATH=
 
-# Base path for GitHub Pages builds. Leave blank for local development.
-# For a repository named "planner", set BASE_PATH=planner before deploying.
-BASE_PATH=""
-
-# Public base path used in the browser. Mirror BASE_PATH when GitHub Pages is enabled.
-NEXT_PUBLIC_BASE_PATH=""
-
-# Toggle GitHub Pages behavior in Next.js builds.
-# Set to "true" when exporting for GitHub Pages so asset URLs include the base path.
-GITHUB_PAGES="false"
-
-# Personal access token with "public_repo" scope for CI deployments.
-# Leave empty for local builds that rely on your configured git remote.
-GITHUB_TOKEN=""
-
-# Full "owner/repo" slug. Required in CI when no git remote named "origin" exists.
-GITHUB_REPOSITORY=""
-
-# Branch that serves your GitHub Pages site. Defaults to "gh-pages".
-GH_PAGES_BRANCH="gh-pages"
-
-# Optional alias for GH_PAGES_BRANCH understood by the deploy script.
-GITHUB_PAGES_BRANCH=""
-
-# Example API endpoint for future integrations. Duplicate this pattern for each service.
-# NEXT_PUBLIC_API_BASE_URL="https://api.example.com"
+# Public runtime configuration (available in the browser)
+# Base path for asset + link helpers. Leave blank for root deployment.
+NEXT_PUBLIC_BASE_PATH=
+# Feature flags exposed to the client bundle. Defaults shown below.
+NEXT_PUBLIC_FEATURE_SVG_NUMERIC_FILTERS=true
+NEXT_PUBLIC_DEPTH_THEME=false
+NEXT_PUBLIC_ORGANIC_DEPTH=false
+NEXT_PUBLIC_UI_GLITCH_LANDING=true
