Add typed environment loaders

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,18 @@ BASE_PATH=""
 # Public base path used in the browser. Mirror BASE_PATH when GitHub Pages is enabled.
 NEXT_PUBLIC_BASE_PATH=""
 
+# Feature toggles surfaced to the client bundle.
+NEXT_PUBLIC_FEATURE_SVG_NUMERIC_FILTERS="true"
+NEXT_PUBLIC_DEPTH_THEME="false"
+NEXT_PUBLIC_ORGANIC_DEPTH="false"
+NEXT_PUBLIC_UI_GLITCH_LANDING="true"
+
 # Toggle GitHub Pages behavior in Next.js builds.
 # Set to "true" when exporting for GitHub Pages so asset URLs include the base path.
 GITHUB_PAGES="false"
+
+# Skip rendering preview routes when exporting static HTML.
+SKIP_PREVIEW_STATIC="false"
 
 # Personal access token with "public_repo" scope for CI deployments.
 # Leave empty for local builds that rely on your configured git remote.
