--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "geist": "^1.5.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "zod": "^3.24.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "styled-jsx": "^5.1.1",
