feat: add web vitals telemetry pipeline

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ BASE_PATH=""
 NEXT_PUBLIC_BASE_PATH=""
 
 # Feature toggles surfaced to the client bundle.
+NEXT_PUBLIC_ENABLE_METRICS="auto"
 NEXT_PUBLIC_FEATURE_SVG_NUMERIC_FILTERS="true"
 NEXT_PUBLIC_DEPTH_THEME="false"
 NEXT_PUBLIC_ORGANIC_DEPTH="false"
