--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ NEXT_PUBLIC_FEATURE_SVG_NUMERIC_FILTERS="true"
 NEXT_PUBLIC_DEPTH_THEME="false"
 NEXT_PUBLIC_ORGANIC_DEPTH="false"
 NEXT_PUBLIC_UI_GLITCH_LANDING="true"
+SAFE_MODE="false"
+NEXT_PUBLIC_SAFE_MODE="false"
 
 # Toggle GitHub Pages behavior in Next.js builds.
 # Set to "true" when exporting for GitHub Pages so asset URLs include the base path.
