Document safe mode and Sentry env flags

--- a/.env.example
+++ b/.env.example
@@ -8,21 +8,40 @@ BASE_PATH=""
 # Public base path used in the browser. Mirror BASE_PATH when GitHub Pages is enabled.
 NEXT_PUBLIC_BASE_PATH=""
 
-# Feature toggles surfaced to the client bundle.
+# Feature toggles surfaced to the client bundle. Set to "true"/"false" to override defaults.
 NEXT_PUBLIC_ENABLE_METRICS="auto"
 NEXT_PUBLIC_FEATURE_SVG_NUMERIC_FILTERS="true"
 NEXT_PUBLIC_DEPTH_THEME="false"
 NEXT_PUBLIC_ORGANIC_DEPTH="false"
 NEXT_PUBLIC_UI_GLITCH_LANDING="true"
+
+# Safe mode gates experimental AI-assisted tooling on both the server and client.
+# Enable this when integrating external AI providers to keep production paths locked down.
 SAFE_MODE="false"
 NEXT_PUBLIC_SAFE_MODE="false"
+
+# Browser Sentry configuration. Provide DSN + environment to enable monitoring in production.
+NEXT_PUBLIC_SENTRY_DSN=""
+NEXT_PUBLIC_SENTRY_ENVIRONMENT=""
+NEXT_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=""
 
 # Toggle GitHub Pages behavior in Next.js builds.
 # Set to "true" when exporting for GitHub Pages so asset URLs include the base path.
 GITHUB_PAGES="false"
 
+# Internal Next.js phase override. Rarely needed—leave unset unless debugging phase-specific code.
+# NEXT_PHASE=""
+
+# Override the runtime environment detection. Next.js sets this automatically.
+# NODE_ENV="development"
+
 # Skip rendering preview routes when exporting static HTML.
 SKIP_PREVIEW_STATIC="false"
+
+# Server-side Sentry configuration. Provide DSN + environment to enable monitoring in production.
+SENTRY_DSN=""
+SENTRY_ENVIRONMENT=""
+SENTRY_TRACES_SAMPLE_RATE=""
 
 # Personal access token with "public_repo" scope for CI deployments.
 # Leave empty for local builds that rely on your configured git remote.
