--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,9 @@ SAFE_MODE="false"
 NEXT_PUBLIC_SAFE_MODE="false"
 
 # Browser Sentry configuration. Provide DSN + environment to enable monitoring in production.
-NEXT_PUBLIC_SENTRY_DSN=""
-NEXT_PUBLIC_SENTRY_ENVIRONMENT=""
-NEXT_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=""
+NEXT_PUBLIC_SENTRY_DSN="https://examplePublicKey.ingest.sentry.io/1234567"
+NEXT_PUBLIC_SENTRY_ENVIRONMENT="development"
+NEXT_PUBLIC_SENTRY_TRACES_SAMPLE_RATE="0.25"
 
 # Toggle GitHub Pages behavior in Next.js builds.
 # Set to "true" when exporting for GitHub Pages so asset URLs include the base path.
@@ -39,9 +39,9 @@ GITHUB_PAGES="false"
 SKIP_PREVIEW_STATIC="false"
 
 # Server-side Sentry configuration. Provide DSN + environment to enable monitoring in production.
-SENTRY_DSN=""
-SENTRY_ENVIRONMENT=""
-SENTRY_TRACES_SAMPLE_RATE=""
+SENTRY_DSN="https://examplePublicKey.ingest.sentry.io/1234567"
+SENTRY_ENVIRONMENT="development"
+SENTRY_TRACES_SAMPLE_RATE="0.25"
 
 # Personal access token with "public_repo" scope for CI deployments.
 # Leave empty for local builds that rely on your configured git remote.
