--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: ./.github/actions/setup-node-project
 
       - name: Verify prompts registry
-        run: npm run verify-prompts
+        run: pnpm run verify-prompts
 
       - name: Export static site
         shell: bash
@@ -50,7 +50,7 @@ jobs:
           else
             export NEXT_PUBLIC_BASE_PATH="/${REPO_NAME}"
           fi
-          npm run deploy
+          pnpm run deploy
 
       - name: Upload static artifact
         uses: actions/upload-pages-artifact@7b1f4a764d45c48632c6b24a0339c27f5614fb0b # v4.0.0
