chore(ci): install pnpm before node cache

--- a/.github/actions/setup-node-project/action.yml
+++ b/.github/actions/setup-node-project/action.yml
@@ -106,6 +106,13 @@ runs:
           echo "lockfile=$LOCKFILE"
         } >>"$GITHUB_OUTPUT"
 
+    - name: Setup pnpm
+      if: ${{ steps.detect.outputs.manager == 'pnpm' }}
+      uses: pnpm/action-setup@v4
+      with:
+        version: ${{ steps.detect.outputs['manager-version'] != '' && steps.detect.outputs['manager-version'] || 'latest' }}
+        run_install: false
+
     - name: Setup Node.js
       uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v4.1.0
       with:
