--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -63,7 +63,8 @@ jobs:
         if: steps.detect-package-manager.outputs.manager == 'pnpm'
         id: pnpm-version
         run: |
-          echo "version=$(node -p \"require('./package.json').packageManager.split('@')[1]\")" >> "$GITHUB_OUTPUT"
+          VERSION=$(node -p "require('./package.json').packageManager.split('@')[1]")
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
       - name: Setup pnpm
         if: steps.detect-package-manager.outputs.manager == 'pnpm'
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
