chore(ci): add design lint to lint job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,11 @@ jobs:
           echo "::add-matcher::.github/matchers/eslint-stylish.json"
           pnpm run lint:ci
 
+      - name: Design lint
+        run: |
+          echo "::add-matcher::.github/matchers/eslint-stylish.json"
+          pnpm run design-lint
+
       - name: Summarize lint
         if: always()
         run: |
