--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "e2e:ci": "playwright test",
     "lint:design": "cross-env ESLINT_USE_FLAT_CONFIG=true pnpm exec eslint --cache --cache-location .eslintcache --no-warn-ignored \"{app,src}/**/*.{js,jsx,ts,tsx}\"",
     "design-lint": "pnpm run lint:design",
+    "audit:ci": "pnpm audit --audit-level=high --json > audit-report.json || true; node scripts/audit-ci-report.mjs audit-report.json",
     "guard:artifacts": "tsx scripts/guard-artifacts.ts",
     "clean:artifacts": "tsx scripts/clean-artifacts.ts",
     "check": "concurrently \"pnpm test -- --run\" \"pnpm run lint\" \"pnpm run lint:design\" \"pnpm run typecheck\" \"pnpm run guard:artifacts\"",
