refactor: rely on setup-node-project for checkout

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -32,12 +32,10 @@ jobs:
       BASE_PATH: Planner
       NEXT_PUBLIC_BASE_PATH: /Planner
     steps:
-      - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
       - uses: ./.github/actions/setup-node-project
         with:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
+          checkout-fetch-depth: 0
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
 
       - name: Setup Pages
