--- a/.github/actions/setup-node-project/action.yml
+++ b/.github/actions/setup-node-project/action.yml
@@ -23,6 +23,9 @@ inputs:
   checkout-ref:
     description: "Optional git ref to checkout"
     required: false
+  checkout-fetch-depth:
+    description: "Depth used when checking out the repository"
+    default: "2"
 
 outputs:
   package-manager:
@@ -47,7 +50,7 @@ runs:
     - name: Checkout
       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
       with:
-        fetch-depth: 2
+        fetch-depth: "${{ inputs['checkout-fetch-depth'] }}"
         ref: "${{ inputs['checkout-ref'] != '' && inputs['checkout-ref'] || github.ref }}"
 
     - name: Detect package manager
