chore(ci): run prompt verification in lint job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,12 @@ jobs:
           echo "::add-matcher::.github/matchers/eslint-stylish.json"
           pnpm run design-lint
 
+      - name: Verify prompts registry
+        id: verify_prompts
+        env:
+          TSX_TEMPDIR: node_modules/.cache/tsx
+        run: pnpm run verify-prompts
+
       - name: Guard generated artifacts
         env:
           TSX_TEMPDIR: node_modules/.cache/tsx
@@ -102,42 +108,8 @@ jobs:
         run: |
           {
             echo "## Lint";
-            echo "- Status: ${{ job.status }}";
-          } >> "$GITHUB_STEP_SUMMARY"
-
-  prompt-verify:
-    name: Verify prompts
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Setup Node project
-        uses: ./.github/actions/setup-node-project
-        with:
-          checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
-          cache-prefix: ci
-          cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
-
-      - name: Verify tool versions
-        uses: ./.github/actions/verify-tool-versions
-        with:
-          pnpm-version: ${{ env.PNPM_VERSION }}
-
-      - name: Refresh gallery usage manifest
-        env:
-          TSX_TEMPDIR: node_modules/.cache/tsx
-        run: pnpm run build-gallery-usage
-
-      - name: Verify prompts registry
-        env:
-          TSX_TEMPDIR: node_modules/.cache/tsx
-        run: pnpm run verify-prompts
-
-      - name: Summarize prompt verification
-        if: always()
-        run: |
-          {
-            echo "## Verify prompts";
-            echo "- Status: ${{ job.status }}";
+            echo "- Status: ${{ job.status }}"; 
+            echo "- Prompt verification: ${{ steps.verify_prompts.outcome || 'not run' }}";
           } >> "$GITHUB_STEP_SUMMARY"
 
   typecheck:
@@ -234,7 +206,6 @@ jobs:
       - typecheck
       - unit-tests
       - audit
-      - prompt-verify
     runs-on: ubuntu-latest
 
     steps:
